# hauki

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Dockerfile  README.md  azure-pipelines-devtest.yml  azure-pipelines-hauki.yml  azure-pipelines-master.yml  azure-pipelines-pull-request.yml  azure-pipelines-release.yml  azure-pipelines-stageprod.yml  azure-pipelines.yml  compose.yaml  config_dev.env.example  docker-compose.yml  hauki_notebook.py  manage.py  pyproject.toml  pytest.ini  release-please-config.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  sonar-project.properties
.github/: ci.yml
.github/workflows/: ci.yml
deploy/: dev_start.sh  entrypoint.sh  init_application.sh  run_maintenance.sh  uwsgi.ini  uwsgi.yml
deploy/elastic_apm_injection/: Dockerfile  local_settings.py
hauki/: asgi.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
hauki/tests/: test_readiness.py
hours/: __init__.py  admin.py  api.py  apps.py  authentication.py  enums.py  exceptions.py  fields.py  filters.py  metadata.py  models.py  permissions.py  renderers.py  serializers.py  signals.py  translation.py  utils.py  views.py  viewsets.py
hours/importer/: base.py  hauki.py  kirjastot.py  sync.py  tprek.py  tprek_ignore_hours_list.csv
hours/migrations/: 0001_initial.py  0002_add_organization_to_resource.py  0002_add_override_to_period.py  0003_add_is_public_to_resource.py  0003_add_period_type_to_openinghours.py  (+29 more)
load-tests/: README.md  hauki-scenarios.js  run.sh
pipelines/: hauki-api-dev.yml  hauki-api-release.yml  hauki-api-review.yml  hauki-api-test.yml
users/: admin.py  models.py  serializers.py
(+63 files in other folders)
